--- a/notebooks/1_pytorch_intro/06_exercises.ipynb
+++ b/notebooks/1_pytorch_intro/06_exercises.ipynb
@@ -11,8 +11,8 @@
     "    - You could use the `cookiecutter` command that is preinstalled on your VM to create a repo, see https://github.com/raoulg/datascience-cookiecutter for details. I made this one myself, because I ended up editing the cookiecutter I was using.\n",
     "    - Another project is this one https://github.com/drivendata/cookiecutter-data-science , also intended for data science projects\n",
     "    - more general cookiecutters are shipped with tools like [pdm](https://pdm-project.org/latest/) and [rye](https://rye-up.com/); starting a project with `pdm init` or `rye init` (see docs for details) will provide you with some minimal structure, and there is the option to provide your own template with pdm (see [pdm template](https://pdm-project.org/latest/usage/template/))\n",
-    "- push your own repo to github. Use `MADS-ML-{yourname}` as a format, eg `MADS-ML-JoostB`.\n",
-    "- Invite me (raoulg; https://github.com/raoulg) as a collaborator to your repo.\n",
+    "- push your own repo to github. Use `IECS-Advanced-AI-{yourname}` as a format, eg `IECS-Advanced-AI-SarmientoC`.\n",
+    "- Invite (clein2312; https://github.com/Clein2312) as a collaborator to your repo.\n",
     "- make the excercises 1-5 below in your repo, and push them to github.\n",
     "\n",
     "Tips:\n",
